--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.2",
+    "@mui/joy": "^5.0.0-alpha.78",
+    "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.3.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
